# boil

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: language.rs  lib.rs
core/src/canon/: graph.rs  mod.rs  models.rs  state.rs
engine/: Cargo.toml
engine/src/: indexer.rs  lib.rs
engine/src/adapters/: null.rs
engine/src/adapters/clustering/: leiden.rs
engine/src/adapters/documentation/: confluence.rs  markdown.rs  mod.rs
engine/src/adapters/embeddings/: fastembed.rs  openai.rs  voyageai.rs
engine/src/adapters/export/: dot.rs  graphml.rs  json.rs  mod.rs  neo4j.rs
engine/src/adapters/input/: build.rs  documentation.rs  mod.rs  ownership.rs  provenance.rs  runtime.rs
engine/src/adapters/input/syntax/: mod.rs
engine/src/adapters/input/syntax/extractors/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
engine/src/adapters/input/syntax/parser/: mod.rs  parse.rs
engine/src/adapters/output/: knowledge_export.rs
engine/src/adapters/ownership/: codeowners.rs  github_teams.rs
engine/src/adapters/reasoning/: architecture.rs  semantics.rs
engine/src/adapters/runtime/: json.rs  mod.rs
engine/src/adapters/syntax/: treesitter.rs
engine/src/adapters/temporal/: git.rs
engine/src/adapters/vcs/: mod.rs
engine/src/adapters/wasm/: build.rs  mod.rs  syntax.rs  temporal.rs  vcs.rs
engine/src/core/: engine.rs  mod.rs
engine/src/core/canon/: patch.rs
engine/src/ports/: documentation.rs  export.rs  input.rs  output.rs  reasoning.rs  syntax.rs  temporal.rs  vcs.rs
packaging/: boil.rb
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/pagerduty-plugin/: Cargo.toml
plugins/pagerduty-plugin/src/: lib.rs
src/: main.rs  plugin_generator.rs
src/adapters/: mod.rs  null.rs
src/adapters/clustering/: mod.rs
src/adapters/documentation/: notion.rs
src/adapters/embeddings/: cohere.rs  mod.rs  ollama.rs
src/adapters/export/: dot.rs  graphml.rs  json.rs  neo4j.rs
src/adapters/input/: build.rs  documentation.rs  ownership.rs  provenance.rs  runtime.rs
src/adapters/input/syntax/: mod.rs
src/adapters/input/syntax/extractors/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
src/adapters/input/syntax/parser/: edits.rs  parse.rs
src/adapters/output/: knowledge_export.rs  mod.rs
src/adapters/ownership/: jira.rs  mod.rs
src/adapters/reasoning/: architecture.rs  mod.rs  semantics.rs
src/adapters/runtime/: opentelemetry.rs
src/adapters/syntax/: mod.rs  treesitter.rs
src/adapters/temporal/: git.rs  mod.rs
src/adapters/vcs/: git.rs  mercurial.rs
src/adapters/wasm/: clustering.rs  documentation.rs  embeddings.rs  ownership.rs  runtime.rs  syntax.rs  temporal.rs
src/core/: engine.rs  fidelity.rs  mod.rs  utils.rs
src/core/canon/: graph.rs  mod.rs  models.rs  patch.rs  state.rs
src/ports/: build.rs  clustering.rs  embeddings.rs  export.rs  input.rs  mod.rs  output.rs  ownership.rs  reasoning.rs  runtime.rs  syntax.rs  temporal.rs
steampipe/: Cargo.toml
steampipe/src/: main.rs  mcp.rs
steampipe/src/batch/: fidelity.rs  mod.rs  resolver.rs
steampipe/src/batch/distillation/: compression.rs  mod.rs  scoring.rs  target_planner.rs
steampipe/src/batch/distillation/transforms/: comments_ast.rs  debug_remover.rs  import_simplifier.rs  literals.rs  mod.rs  skeleton.rs  strategy.rs  symbol_pruner.rs
steampipe/src/commands/: batch.rs  distill.rs  edit.rs  find_expand.rs  ls_show.rs  mod.rs
steampipe/src/config/: mod.rs
steampipe/test/: comprehensive_test.rs
test/: comprehensive_test.rs
