[package]
name = "boil"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "An Architectural Intelligence Platform that builds a heterogeneous knowledge graph (canon) from your codebase."
repository = "https://github.com/jamie-k-kim/boil"
homepage = "https://github.com/jamie-k-kim/boil"
license = "MIT"
keywords = ["knowledge-graph", "architecture", "ast", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "boil"
path = "src/lib.rs"

[[bin]]
name = "boil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
dirs = "5.0.1"
regex = "1.10.4"

tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.3"
tree-sitter-c = "0.20.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.0"
tree-sitter-typescript = "0.20.5"
tree-sitter-cpp = "0.20.0"
tree-sitter-java = "0.20.0"
tree-sitter-go = "0.20.0"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-ruby = "0.20.0"
tree-sitter-kotlin = "=0.2.8"
tree-sitter-swift = "=0.3.0"

globset = "0.4"
tokenizers = { version = "0.15", features = ["hf-hub", "http"] }
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
console = "0.15.11"
tabled = "0.21.0"
indicatif = "0.18.4"
petgraph = { version = "0.8.3", features = ["serde-1"] }
leiden-rs = { version = "0.8.1", features = ["petgraph"] }
git2 = { version = "0.21.0" }
fastembed = "5.16.0"
extism = "1.0.0"
ureq = { version = "3.3.0", features = ["json"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
rayon = "1.12.0"

ort = { version = "2.0.0-rc.12", default-features = false }
bincode = "1.3"
tempfile = "3.27.0"

[features]
default = ["dynamic", "system"]
dynamic = ["ort/load-dynamic"]
system = []
static = ["git2/vendored-openssl", "ort/download-binaries"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
