[workspace]
resolver = "2"
members = [
    "core",
    "engine",
    "steampipe",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
repository = "https://github.com/jamie-k-kim/boil"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
bincode = "1.3"
petgraph = { version = "0.8.3", features = ["serde-1"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
tokenizers = { version = "0.15", features = ["hf-hub", "http"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
console = "0.15"
indicatif = "0.18"
dirs = "5.0.1"
fastembed = "5.16.0"
ureq = { version = "3.3.0", features = ["json"] }
extism = "1.0.0"
leiden-rs = { version = "0.8.1", features = ["petgraph"] }
git2 = { version = "0.21.0" }
regex = "1.10.4"
rayon = "1.12.0"
ort = { version = "2.0.0-rc.12", default-features = false }
tree-sitter = "0.20.10"
toml_edit = { version = "0.22", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
